# jupyter-code-assistant

./: LICENSE  MANIFEST.in  README.md  install.json  jupyterlab_ai_assistant.json  main.py  pyproject.toml  pyproject.toml.new  setup.py
jupyter-config/jupyter_server_config.d/: jupyterlab_ai_assistant.json
src/: index.ts
src/components/: ChatPanel.tsx  CodeSuggestion.tsx  ErrorFixer.tsx  Message.tsx  SettingsPanel.tsx
src/jupyterlab_ai_assistant/: __init__.py  handlers.py
src/jupyterlab_ai_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/jupyterlab_ai_assistant/llm/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py
src/services/: LLMService.ts  NotebookService.ts
src/style/: index.css
src/utils/: clipboard.ts  errorParser.ts
